--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -19,13 +19,16 @@
                         <a href="#page-top"></a>
                     </li>
                     <li class="page-scroll">
-                        <a href="#portfolio">Portfolio</a>
+                        <a href="#nabizime">Nabízíme</a>
                     </li>
                     <li class="page-scroll">
-                        <a href="#about">About</a>
+                        <a href="#o_nas">O nás</a>
                     </li>
                     <li class="page-scroll">
-                        <a href="#contact">Contact</a>
+                        <a href="#kontakt">Kontakt</a>
+                    </li>
+                    <li class="page-scroll">
+                        <a href="#ke_stazeni">Ke stažení</a>
                     </li>
                 </ul>
             </div>
