--- a/_includes/ke_stazeni.html
+++ b/_includes/ke_stazeni.html
@@ -1,6 +1,6 @@
 
     <!-- Portfolio Grid Section -->
-    <section id="portfolio">
+    <section id="ke_stazeni">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
