--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,10 +4,11 @@
     <body id="page-top" class="index">
     {% include nav.html %}
     {% include header.html %}
-    {% include portfolio_grid.html %}
-    {% include about.html %}
+    {% include nabizime.html %}
+    {% include o_nas.html %}
 
-    {% include contact.html %}
+    {% include kontakt.html %}
+    {% include ke_stazeni.html %}
 
     {% include footer.html %}
     {% include modals.html %}
