--- a/_includes/nabizime.html
+++ b/_includes/nabizime.html
@@ -4,23 +4,37 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2>Portfolio</h2>
+                    <h2>Nabízíme</h2>
                     <hr class="star-primary">
                 </div>
             </div>
             <div class="row">
-                {% for post in site.posts %}
-                    <div class="col-sm-4 portfolio-item">
-                        <a href="#portfolioModal-{{ post.modal-id }}" class="portfolio-link" data-toggle="modal">
-                            <div class="caption">
-                                <div class="caption-content">
-                                    <i class="fa fa-search-plus fa-3x"></i>
-                                </div>
-                            </div>
-                            <img src="img/portfolio/{{ post.img }}" class="img-responsive" alt="{{ post.alt }}">
-                        </a>
-                    </div>
-                {% endfor %}
+                <div class="col-sm-4 portfolio-item text-center">
+                    <span class="fa fa-users fa-5x"></span>
+                    <h3>Poradenství</h3>
+                </div>
+                <div class="col-sm-4 portfolio-item text-center">
+                    <span class="fa fa-paperclip fa-5x"></span>
+                    <h3>Vystavení dokladů</h3>
+                </div>
+                <div class="col-sm-4 portfolio-item text-center">
+                    <span class="fa fa-bar-chart fa-5x"></span>
+                    <h3>Zpracování intrastatu</h3>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-4 portfolio-item text-center">
+                    <span class="fa fa-user-plus fa-5x"></span>
+                    <h3>Ochota</h3>
+                </div>
+                <div class="col-sm-4 portfolio-item text-center">
+                    <span class="fa fa-heartbeat fa-5x"></span>
+                    <h3>Čestné jednání</h3>
+                </div>
+                <div class="col-sm-4 portfolio-item text-center">
+                    <span class="fa fa-calendar fa-5x"></span>
+                    <h3>Dlouholeté zkušenosti</h3>
+                </div>
             </div>
         </div>
     </section>
