--- a/_includes/css/style.css
+++ b/_includes/css/style.css
@@ -1,4 +1,5 @@
 hr.star-primary:after { background-color: transparent; }
 
 #nabizime .row { margin-top: 25px; margin-bottom: 25px; }
+#ke_stazeni .row { margin-top: 35px; margin-bottom: 35px; }
 .portfolio-item h3 { white-space: nowrap; }
