--- a/_includes/o_nas.html
+++ b/_includes/o_nas.html
@@ -3,21 +3,25 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2>About</h2>
+                    <h2>O nás</h2>
                     <hr class="star-light">
                 </div>
             </div>
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-2">
-                    <p>Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional LESS stylesheets for easy customization.</p>
+                    <p>Dovážíte nebo vyvážíte zboží z/do třetí země? Nevíte si rady s náležitostmi pro hladký a spolehlivý průběh <b>celního odbavení</b>? Již 18 let se zabývám touto problematikou. Zajišťuji kompletní servis v <b>celním řízení</b>.</p>
                 </div>
                 <div class="col-lg-4">
-                    <p>Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point! </p>
+                    <p>Mou prioritou je celní odbavení kontejnerových zásilek pro zákazníky z celé ČR na terminále v Praze, kamionové přepravy (celovozy i sběráky), letecké zásilky ale i maličké zásilky přepravovány <b>celní poštou</b>.</p>
                 </div>
-                <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <a href="#" class="btn btn-lg btn-outline">
-                        <i class="fa fa-download"></i> Download Theme
-                    </a>
+            </div>
+            <div class="row">
+                <div class="col-lg-4 col-lg-offset-2">
+                    <p>Pokud obchodujete pouze v rámci EU, zajišťuji i zpracování <b>INTRASTATU</b>.</p>
+                    <p>Vzhledem k tomu, že v této profesi spoléhám pouze sama na sebe, je zohledněna i cena za poskytnuté služby.</p>
+                </div>
+                <div class="col-lg-4">
+                    <p>Neváhejte mne kdykoliv kontaktovat, bude pro mne potěšením poradit, vysvětlit a následně zajistit vše pro celní odbavení Vašich zásilek v nejlepší kvalitě a v nejkratším čase.   </p>
                 </div>
             </div>
         </div>
