--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -28,6 +28,9 @@
                         <a href="#kontakt">Kontakt</a>
                     </li>
                     <li class="page-scroll">
+                        <a href="#reference">reference</a>
+                    </li>
+                    <li class="page-scroll">
                         <a href="#ke_stazeni">Ke stažení</a>
                     </li>
                 </ul>
