--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,6 +8,7 @@
     {% include o_nas.html %}
 
     {% include kontakt.html %}
+    {% include reference.html %}
     {% include ke_stazeni.html %}
 
     {% include footer.html %}
