Prepare kontakt for map

--- a/_includes/kontakt.html
+++ b/_includes/kontakt.html
@@ -8,7 +8,8 @@
 			</div>
 		</div>
 		<div class="row">
-			<div class="col-lg-8 col-lg-offset-2">
+			<div class="col-lg-6">
+				<h3>Napište nám</h3>
 				<form  action="//formspree.io/you@email.com" method="POST" name="sentMessage" id="contactForm" novalidate>
 					<div class="row control-group">
 						<div class="form-group col-xs-12 floating-label-form-group controls">
@@ -43,6 +44,10 @@
 						</div>
 					</div>
 				</form>
+			</div>
+			<div class="col-lg-6">
+				<h3>Najděte nás</h3>
+				MAPA
 			</div>
 		</div>
 	</div>
