--- a/_includes/header.html
+++ b/_includes/header.html
@@ -10,6 +10,9 @@
                         <span class="skills">Nabízíme Vám kompletní služby v oboru celní problematiky</span>
                     </div>
                 </div>
+                <div class="col-lg-12">
+                  <div class="alert alert-danger" role="alert">Stránky jsou ve výstavbě</div>
+                </div>
             </div>
         </div>
     </header>
