--- a/_includes/nabizime.html
+++ b/_includes/nabizime.html
@@ -19,7 +19,7 @@
                 </div>
                 <div class="col-sm-4 portfolio-item text-center">
                     <span class="fa fa-bar-chart fa-5x"></span>
-                    <h3>Zpracování intrastatu</h3>
+                    <h3>Tvorba intrastatu</h3>
                 </div>
             </div>
             <div class="row">
@@ -33,7 +33,7 @@
                 </div>
                 <div class="col-sm-4 portfolio-item text-center">
                     <span class="fa fa-calendar fa-5x"></span>
-                    <h3>Dlouholeté zkušenosti</h3>
+                    <h3>Dlouholetá praxe</h3>
                 </div>
             </div>
         </div>
