--- a/_includes/kontakt.html
+++ b/_includes/kontakt.html
@@ -47,7 +47,23 @@
 			</div>
 			<div class="col-lg-6">
 				<h3>Najděte nás</h3>
-				MAPA
+				<div id="mapa" class="img-responsive"></div>
+				<script type="text/javascript">
+					var center = SMap.Coords.fromWGS84(14.5398474, 50.0565929);
+					var m = new SMap(JAK.gel("mapa"), center, 17);
+					m.addDefaultLayer(SMap.DEF_BASE).enable();
+					m.addDefaultControls();
+
+					var layer = new SMap.Layer.Marker();
+					m.addLayer(layer);
+					layer.enable();
+
+					var options = {};
+					var marker = new SMap.Marker(center, "myMarker", options);
+					layer.addMarker(marker);
+				</script>
+				<p class="text-primary text-center">U Továren 261/27</p>
+				<p class="text-primary text-center">102 00 Praha 10</p>
 			</div>
 		</div>
 	</div>
