--- a/_includes/reference.html
+++ b/_includes/reference.html
@@ -1,6 +1,6 @@
 
     <!-- Portfolio Grid Section -->
-    <section id="reference">
+    <section class="success" id="reference">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
