--- a/_includes/css/style.css
+++ b/_includes/css/style.css
@@ -1,3 +1,6 @@
+h3 { text-transform: none; }
+.navbar-brand { text-transform: none; }
+
 hr.star-primary:after { background-color: transparent; }
 
 #nabizime .row { margin-top: 25px; margin-bottom: 25px; }
@@ -5,10 +8,12 @@ hr.star-primary:after { background-color: transparent; }
 #ke_stazeni .row { margin-top: 35px; margin-bottom: 35px; }
 /*.portfolio-item h3 { white-space: nowrap; }*/
 
+#message { height: 120px; }
 #kontakt #mapa { height: 375px; }
 
 #kontakt .text-primary { margin-top: 10.5px; margin-bottom: 0px; }
 
 #reference h3 { padding: 75px 25px 75px 25px; }
+.portfolio-item { text-transform: none; }
 
 .list-inline li { margin-right: 25px; }
