--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,9 +5,7 @@
                 <div class="col-lg-12">
                     <img class="img-responsive" src="img/logo.svg" alt="{{ site.title }}">
                     <div class="intro-text">
-                        <span class="name">{{ site.title }}</span>
-                        <hr class="star-light">
-                        <span class="skills">Nabízíme Vám kompletní služby v oboru celní problematiky</span>
+                        <span class="name">Celní služby</span>
                     </div>
                 </div>
                 <div class="col-lg-12">
