--- a/_includes/kontakt.html
+++ b/_includes/kontakt.html
@@ -1,70 +1,92 @@
 <!-- Contact Section -->
 <section id="kontakt">
-	<div class="container">
-		<div class="row">
-			<div class="col-lg-12 text-center">
-				<h2>Kontakt</h2>
-				<hr class="star-primary">
-			</div>
-		</div>
-		<div class="row">
-			<div class="col-lg-6">
-				<h3>Napište nám</h3>
-				<form  action="//formspree.io/you@email.com" method="POST" name="sentMessage" id="contactForm" novalidate>
-					<div class="row control-group">
-						<div class="form-group col-xs-12 floating-label-form-group controls">
-							<label>Vaše jméno</label>
-							<input type="text" name="name" class="form-control" placeholder="Vaše jméno" id="name" required data-validation-required-message="Please enter your name.">
-							<p class="help-block text-danger"></p>
-						</div>
-					</div>
-					<div class="row control-group">
-						<div class="form-group col-xs-12 floating-label-form-group controls">
-							<label>Váš email</label>
-							<input type="email" name="_replyto" class="form-control" placeholder="Váš email" id="email" required data-validation-required-message="Please enter your email address.">
-							<p class="help-block text-danger"></p>
-						</div>
-					</div>
-					<div>
-						<input type="hidden"  name="_subject" value="New submission!">
-						<input type="text" name="_gotcha" style="display:none" />
-					</div>
-					<div class="row control-group">
-						<div class="form-group col-xs-12 floating-label-form-group controls">
-							<label>Zpráva</label>
-							<textarea rows="5" name="message" class="form-control" placeholder="Zpráva" id="message" required data-validation-required-message="Please enter a message."></textarea>
-							<p class="help-block text-danger"></p>
-						</div>
-					</div>
-					<br>
-					<div id="success"></div>
-					<div class="row">
-						<div class="form-group col-xs-12">
-							<button type="submit" class="btn btn-success btn-lg">Odeslat zprávu</button>
-						</div>
-					</div>
-				</form>
-			</div>
-			<div class="col-lg-6">
-				<h3>Najděte nás</h3>
-				<div id="mapa" class="img-responsive"></div>
-				<script type="text/javascript">
-					var center = SMap.Coords.fromWGS84(14.5398474, 50.0565929);
-					var m = new SMap(JAK.gel("mapa"), center, 17);
-					m.addDefaultLayer(SMap.DEF_BASE).enable();
-					m.addDefaultControls();
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-12 text-center">
+        <h2>Kontakt</h2>
+        <hr class="star-primary">
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-lg-6">
+        <h3>Napište nám</h3>
+        <form  action="//formspree.io/you@email.com" method="POST" name="sentMessage" id="contactForm" novalidate>
+          <div class="row control-group">
+            <div class="form-group col-xs-12 floating-label-form-group controls">
+              <label>Vaše jméno</label>
+              <input type="text" name="name" class="form-control" placeholder="Vaše jméno" id="name" required data-validation-required-message="Please enter your name.">
+              <p class="help-block text-danger"></p>
+            </div>
+          </div>
+          <div class="row control-group">
+            <div class="form-group col-xs-12 floating-label-form-group controls">
+              <label>Váš email</label>
+              <input type="email" name="_replyto" class="form-control" placeholder="Váš email" id="email" required data-validation-required-message="Please enter your email address.">
+              <p class="help-block text-danger"></p>
+            </div>
+          </div>
+          <div>
+            <input type="hidden"  name="_subject" value="New submission!">
+            <input type="text" name="_gotcha" style="display:none" />
+          </div>
+          <div class="row control-group">
+            <div class="form-group col-xs-12 floating-label-form-group controls">
+              <label>Zpráva</label>
+              <textarea rows="5" name="message" class="form-control" placeholder="Zpráva" id="message" required data-validation-required-message="Please enter a message."></textarea>
+              <p class="help-block text-danger"></p>
+              <button type="submit" class="btn btn-success btn-lg">Odeslat zprávu</button>
+            </div>
+          </div>
+          <br>
+          <div id="success"></div>
+        </form>
+      </div>
+      <div class="col-lg-6">
+        <h3>Najdete nás</h3>
+        <div id="mapa" class="img-responsive"></div>
+        <script type="text/javascript">
+          var center = SMap.Coords.fromWGS84(14.5398474, 50.0565929);
+          var m = new SMap(JAK.gel("mapa"), center, 17);
+          m.addDefaultLayer(SMap.DEF_BASE).enable();
+          m.addDefaultControls();
 
-					var layer = new SMap.Layer.Marker();
-					m.addLayer(layer);
-					layer.enable();
+          var layer = new SMap.Layer.Marker();
+          m.addLayer(layer);
+          layer.enable();
 
-					var options = {};
-					var marker = new SMap.Marker(center, "myMarker", options);
-					layer.addMarker(marker);
-				</script>
-				<p class="text-primary text-center">U Továren 261/27</p>
-				<p class="text-primary text-center">102 00 Praha 10</p>
-			</div>
-		</div>
-	</div>
+          var options = {};
+          var marker = new SMap.Marker(center, "myMarker", options);
+          layer.addMarker(marker);
+        </script>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-lg-4">
+        <h3>Adresa</h3>
+        <p class="text-primary">
+          Areál filmových ateliérů Hostivař<br />
+          U Továren 261/27<br />
+          102 00 Praha 10
+        </p>
+      </div>
+      <div class="col-lg-4">
+        <h3>Kontakty</h3>
+        <p class="text-primary">
+          Věra Drobílková:<br />
+          +420 605 716 666<br />
+          Michal Drobílek:<br />
+          +420 605 431 735
+        </p>
+      </div>
+      <div class="col-lg-4">
+        <h3>Fakturační adresa</h3>
+        <p class="text-primary">
+          Mečíkova 2853/6<br />
+          106 00 Praha 10<br />
+          IČ 241 92 031<br />
+          187267 C, Městský soud v Praze
+        </p>
+      </div>
+    </div>
+  </div>
 </section>
