--- a/_includes/nabizime.html
+++ b/_includes/nabizime.html
@@ -19,21 +19,7 @@
                 </div>
                 <div class="col-sm-4 portfolio-item text-center">
                     <span class="fa fa-bar-chart fa-5x"></span>
-                    <h3>Tvorba intrastatu</h3>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-sm-4 portfolio-item text-center">
-                    <span class="fa fa-user-plus fa-5x"></span>
-                    <h3>Ochota</h3>
-                </div>
-                <div class="col-sm-4 portfolio-item text-center">
-                    <span class="fa fa-heartbeat fa-5x"></span>
-                    <h3>Čestné jednání</h3>
-                </div>
-                <div class="col-sm-4 portfolio-item text-center">
-                    <span class="fa fa-calendar fa-5x"></span>
-                    <h3>Dlouholetá praxe</h3>
+                    <h3>Intrastat</h3>
                 </div>
             </div>
         </div>
