--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,7 +3,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <img class="img-responsive" src="img/logo.svg" alt="{{ site.title }}">
+                    <img class="img-responsive" src="img/logo.png" alt="{{ site.title }}">
                     <div class="intro-text">
                         <span class="name">Celní služby</span>
                     </div>
